# intmax

./: .gitignore  Cargo.toml  Makefile.toml  README.md
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
cli/node/: Cargo.toml
cli/node/src/: main.rs
core/commiter/: Cargo.toml
core/executor/: Cargo.toml
core/exitor/: Cargo.toml
core/query-receiver/: Cargo.toml
core/su-receiver/: Cargo.toml
core/su-receiver/src/: lib.rs
core/tx-receiver/: Cargo.toml
core/tx-receiver/src/: error.rs  lib.rs
infra/eth-provider/: Cargo.toml
infra/eth-provider/src/: contracts.rs  lib.rs
infra/eth-provider/src/contracts/: my_coin.rs
infra/json-rpc-api/: Cargo.toml
infra/json-rpc-api/src/: lib.rs
infra/json-rpc-servers/: Cargo.toml
infra/json-rpc-servers/src/: lib.rs  middleware.rs
primitives/config/: Cargo.toml
primitives/config/src/: lib.rs
primitives/db/: Cargo.toml
primitives/db/src/: lib.rs
primitives/json-rpc-api/src/: lib.rs
primitives/json-rpc-servers/src/: middleware.rs
primitives/rpc/: Cargo.toml
primitives/rpc/src/: error.rs  lib.rs
primitives/runner/: Cargo.toml
primitives/runner/src/: lib.rs
primitives/verkle/: Cargo.toml
primitives/verkle/src/: lib.rs
primitives/zk/: Cargo.toml
res/: config.toml  config_dev.toml  config_test.toml
service/eth-provider/: README.md
service/eth-provider/src/artifacts/localhost/: MyCoin.json
service/rpc/: Cargo.toml
service/rpc/src/: error.rs  lib.rs
service/runner/: Cargo.toml
service/runner/src/: lib.rs
