[workspace]
members = [
    "cli/node",
    "core/commiter",
    "core/executor",
    "core/exitor",
    "core/query-receiver",
    "core/su-receiver",
    "core/tx-receiver",
    "infra/json-rpc",
    "primitives/config",
    "primitives/db",
    "primitives/rpc",
    "primitives/runner",
    "primitives/verkle",
    "primitives/zk",
]

[profile.release]
# Intmax runtime requires unwinding.
panic = "unwind"
