[workspace]
members = [
    "cli/node",
    "core/commiter",
    "core/executor",
    "core/exitor",
    "core/query-receiver",
    "core/su-receiver",
    "core/tx-receiver",
    "primitives/config",
    "primitives/db",
    "primitives/rpc",
    "primitives/runner",
    "primitives/verkle",
    "primitives/zk",
    "infra/json-rpc-api",
    "infra/json-rpc-servers",
    "infra/eth-provider"
]

[profile.release]
# Intmax runtime requires unwinding.
panic = "unwind"
