[workspace]
members = [
    "cli/node",
    "core/commiter",
    "core/executor",
    "core/exitor",
    "core/query-receiver",
    "core/su-receiver",
    "core/tx-receiver",
    "primitives/config",
    "primitives/db",
    "primitives/json-rpc-api",
    "primitives/json-rpc-servers",
    "primitives/verkle",
    "primitives/zk",
    "service/rpc",
    "service/runner",
    "service/eth-provider",
]

[profile.release]
# Intmax runtime requires unwinding.
panic = "unwind"
