[package]
name = "node"
version = "0.1.0"
edition = "2021"
authors = ["IntMax<dev@intmax.xyz>"]
description = "IntMax operator node."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "node"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }

runner = { path = "../../primitives/runner" }
su-receiver = { path = "../../core/su-receiver" }
tx-receiver = { path = "../../core/tx-receiver" }
