[package]
name = "intmax-node"
version = "0.1.0"
edition = "2021"
authors = ["IntMax<dev@intmax.xyz>"]
description = "IntMax operator node."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "intmax-node"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }

intmax-runner = { path = "../../primitives/runner" }
intmax-config = { path = "../../primitives/config" }
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2.5"