[package]
name = "tx-receiver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethereum-types = "0.12"
fc-rpc-core = { version = "1.0.0" }
jsonrpc-core = "18.0.0"
primitive-types = "0.9.1"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2.5"