[package]
name = "intmax-json-rpc-servers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpc-core = "18.0.0"
http = { package = "jsonrpc-http-server", version = "18.0.0" }
ws = { package = "jsonrpc-ws-server", version = "18.0.0" }

serde_json = "1.0.8"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2.5"
uuid = { version = "0.8", features = ["serde", "v4"] }
tokio = { version = "1.16.1", features = ["full"] }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
jsonrpc-core-client = { version = "18.0.0", features = ["ws"] }
futures = "0.3.19"
url = "1.7"