[package]
name = "intmax-config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.11.0"
project-root = "0.2.2"
serde_derive = "1.0.8"
serde = "1.0.8"
tracing = "0.1"
tracing-subscriber = "0.2"