[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2.5"
kvdb = "0.11.0"

smallvec = "1.0.0"
codec = { package = "parity-scale-codec", version = "2.0.0", features = ["derive"] }
serde = { version = "1.0.132", features = ["derive"] }

[dev-dependencies]
kvdb-memorydb = "0.11.0"
kvdb-rocksdb = "0.15.0"
tempfile = "3.1.0"
