[package]
name = "intmax-rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpc-core = "18.0.0"
ethereum = { version = "0.11.1", features = ["with-codec"] }
ethereum-types = "0.12"
primitive-types = "0.9.1"
fc-rpc-core = { version = "1.0.0" }
tokio = { version = "1.16.1", features = ["full"] }
thiserror = "1.0"

intmax-json-rpc-api = { path = "../../infra/json-rpc-api" }
tx-receiver = { path = "../../core/tx-receiver" }