[package]
name = "intmax-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
tokio = { version = "1", features = ["full"] }
futures = "0.3.19"
http = { package = "jsonrpc-http-server", version = "18.0.0" }

intmax-config = { path = "../config" }
intmax-rpc = { path = "../rpc" }
intmax-json-rpc-api = { path = "../../infra/json-rpc-api" }
intmax-json-rpc-servers = { path = "../../infra/json-rpc-servers" }
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2.5"
tx-receiver = { path = "../../core/tx-receiver" }

[dev-dependencies]
state = { version = "0.5" }