[package]
name = "intmax-verkle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2.5"

codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"] }
verkle-tree = { git = "https://github.com/InternetMaximalism/verkle-tree" }
franklin-crypto = {git = "https://github.com/matter-labs/franklin-crypto", branch = "beta", features = ["multicore", "plonk"]}
bytes = "1.1.0"

[dev-dependencies]
byteorder = "1"